--- a/css/style.css
+++ b/css/style.css
@@ -2,23 +2,36 @@
 	width: 100vw;
 	height: 100vh;
 	display: flex;
-	justify-content: center;
+	align-items: center;
+}
+
+.cat,
+.list {
+	height: 80%;
+}
+
+.list {
+	width: 20%;
+	font-size: 30px;
 }
 
 .cat {
-	height: 80%;
+	width: 80%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .cat__name {
 	text-align: center;
 }
 
-.main-img {
-	height: 100%;
-	width: 100%;
+.cat__img {
+	height: 70%;
+	width: 70%;
 }
 
-.main-img:hover {
+.cat-img:hover {
 	cursor: pointer;
 }
 
